Templates/Demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lyngdemo2
  name: mydeployment
  namespace: lyngdemo2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lyngdemo2
  template:
    metadata:
      labels:
        app: lyngdemo2
    spec:
      containers:
      - name: asyncapi
        image: iitaks.azurecr.io/asyncapi:2.0
        ports:
        - containerPort: 80
